src/objects/G2OPlanning_PUC__c.object
<CustomObject>
    <fields>
        <fullName>Documentation__c</fullName>
        <description>Link to the PUC doc in Project Place</description>
        <inlineHelpText>Link to the PUC doc in Project Place</inlineHelpText>
        <label>Documentation</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Hidden_Name__c</fullName>
        <externalId>true</externalId>
        <label>Hidden_Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <label>Track</label>
        <picklist>
            <picklistValues>
                <fullName>General</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Use Cases</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Use Cases</pluralLabel>
    <recordTypes>
        <fullName>Integration_Story</fullName>
        <active>true</active>
        <description>An integration path</description>
        <label>Integration Story</label>
    </recordTypes>
    <recordTypes>
        <fullName>PUC</fullName>
        <active>true</active>
        <description>Process Use Case</description>
        <label>PUC</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>